# PuzzlebotAutonomousChallenge

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
ros2_ws/src/puzzlebot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_bringup/foxglove_layouts/: object_detection_yolo.json
ros2_ws/src/puzzlebot_bringup/launch/: object_detection_yolo.launch.py  puzzlebot.launch.py  simulation_puzzlebot.launch.py
ros2_ws/src/puzzlebot_control/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_control/config/: joystick_teleop.yaml  simulation_differential_drive.yaml  twist_mux.yaml
ros2_ws/src/puzzlebot_control/launch/: joystick_teleop.launch.py  pid_differential_pose_controller.launch.py  simulation_controller.launch.py
ros2_ws/src/puzzlebot_control/python_nodes/: odometry.py  offset_controller.py  pid_differential_pose_controller.py
ros2_ws/src/puzzlebot_description/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_description/gazebo_config/: simulation_gazebo.config
ros2_ws/src/puzzlebot_hardware/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_perception/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_perception/config/: object_detection_yolo.yaml
ros2_ws/src/puzzlebot_perception/foxglove_config/: object_detection_yolo.json
ros2_ws/src/puzzlebot_perception/launch/: object_detection_yolo.launch.py
ros2_ws/src/puzzlebot_perception/python_nodes/: object_detection_yolo.py
(+16 files in other folders)
